second banner section

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
-.bg-c{
-    background-color: #ec8e41
+.bg-seco{
+    background-color: #FFF9F4
+    ;
+}
+.bg-orengi{
+    color: #FA804C
     ;
 }
